--- a/templates/index5.html
+++ b/templates/index5.html
@@ -13,8 +13,6 @@
         <script src="{{ STATIC_URL }}js/vendor/modernizr-2.6.2.min.js"></script>
     </head>
     <body>
-        {% block body %}
-            <p>This is my test index.html.</p>
-        {% endblock %}
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-        <script>window.jQuery || document.write('
+            <p>This is my index5.html.</p>
+    </body>
+</html>
