--- a/templates/softball/base.html
+++ b/templates/softball/base.html
@@ -1,28 +1,22 @@
-<!DOCTYPE html>
-<!--[if lt IE 7]><html class="no-js lt-ie9 lt-ie8 lt-ie7"><![endif]-->
-<!--[if IE 7]><html class="no-js lt-ie9 lt-ie8"><![endif]-->
-<!--[if IE 8]><html class="no-js lt-ie9"><![endif]-->
-<!--[if gt IE 8]><!--><html class="no-js"><!--<![endif]-->
+{% extends "base.html" %}
 
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>{% block title %}{% endblock %}</title>
-    <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="{{ STATIC_URL }}css/normalize.css">
-    <link rel="stylesheet" href="{{ STATIC_URL }}css/main.css">
-    <script src="{{ STATIC_URL }}js/vendor/modernizr-2.6.2.min.js"></script>
-</head>
+{% load softball_tags %}
 
-<body>
-  {% block body %}{% endblock %}
+{% block title %}Softball Tracker{% endblock %}
 
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-    <script>window.jQuery || document.write('
-           <script src="{{ STATIC_URL }}js/vendor/jquery-1.8.2.min.js"><\/script>
-           ')</script>
-    <script src="{{ STATIC_URL }}js/plugins.js"></script>
-    <script src="{{ STATIC_URL }}js/main.js"></script>
-</body>
+{% block navbar-buttons %}
+<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+    <span class="icon-bar"></span>
+    <span class="icon-bar"></span>
+    <span class="icon-bar"></span>
+</a>
+<a class="brand" href="{% url softball_home %}">Softball Tracker</a>
+<div class="nav-collapse collapse">
+    <ul class="nav">
+        <li class="{% active request '/team/' %}"><a href="{% url team_list %}">Teams</a></li>
+        <li class="{% active request '/player/' %}"><a href="{% url player_list %}">Players</a></li>
+        <li class="{% active request '/game/' %}"><a href="{% url game_list %}">Games</a></li>
+    </ul>
+</div><!--/.nav-collapse -->
+{% endblock %}
 
-</html>
