--- a/templates/softball/game/list.html
+++ b/templates/softball/game/list.html
@@ -1,6 +1,6 @@
 {% extends 'softball/base.html' %}
 
-{% block title %}Teams{% endblock %}
+{% block title %}Games{% endblock %}
 
 {% block body %}
 <div class="row-fluid">
@@ -8,11 +8,11 @@
         <table class="table table-striped table-condensed table-hover">
             <thead>
                 <tr>
-                    <th width="100%">Team Name</th>
-                    <th class="right">#&nbsp;Players</th>
-                    <th class="right">#&nbsp;Games</th>
-                    <th class="right">Wins</th>
-                    <th class="right">Losses</th>
+                    <th>Date</th>
+                    <th>Location</th>
+                    <th>Away Team</th>
+                    <th>Home Team</th>
+                    <th class="right">Score</th>
                 </tr>
             </thead>
             <tfoot>
@@ -21,18 +21,18 @@
                         <div class="span4">
                             {% if perms.softball.add_game %}
                             <div class="pagination pagination-left pagination-small">
-                                <a class="btn" href="{% url team_create %}">Add Team</a>
+                                <a class="btn" href="{% url game_create %}">Add Game</a>
                             </div>
                             {% endif %}
                         </div>
                         <div class="span8">
                             <div class="pagination pagination-right pagination-small">
                                 <ul>
-                                    {% if teams.paginator.num_pages > 1 %}
-                                        <li><span>{{ teams.paginator.count }} Teams Total</span></li>
-                                        {% if teams.has_previous %}
+                                    {% if games.paginator.num_pages > 1 %}
+                                        <li><span>{{ games.paginator.count }} Games Total</span></li>
+                                        {% if games.has_previous %}
                                             <li>
-                                                <a href="?page={{ teams.previous_page_number }}">
+                                                <a href="?page={{ games.previous_page_number }}">
                                                     &laquo;
                                                 </a>
                                             </li>
@@ -42,17 +42,17 @@
                                             </li>
                                         {% endif %}
 
-                                        {% for page_num in teams.paginator.page_range %}
-                                            <li {% if page_num == teams.number %}class="active"{% endif %}>
+                                        {% for page_num in games.paginator.page_range %}
+                                            <li {% if page_num == games.number %}class="active"{% endif %}>
                                                 <a href="?page={{ page_num }}">
                                                     {{ page_num }}
                                                 </a>
                                             </li>
                                         {% endfor %}
 
-                                        {% if teams.has_next %}
+                                        {% if games.has_next %}
                                             <li>
-                                                <a href="?page={{ teams.next_page_number }}">
+                                                <a href="?page={{ games.next_page_number }}">
                                                     &raquo;
                                                 </a>
                                             </li>
@@ -69,20 +69,33 @@
                 </tr>
             </tfoot>
             <tbody>
-                {% for team in teams %}
+                {% for game in games %}
                     <tr>
                         <td>
-                            <a href="{% url team_view team_id=team.pk %}">
-                                {{ team.name }}
+                            <a href="{% url game_view game_id=game.id %}">
+                                {{ game.played_on }}
                             </a>
                         </td>
-                        <td class="right">{{ team.players.count }}</td>
-                        <td class="right">{{ team.rosters.count }}</td>
-
-                        {% with record=team.record %}
-                            <td class="right">{{ record.0 }}</td>
-                            <td class="right">{{ record.1 }}</td>
-                        {% endwith %}
+                        <td>{{ game.location }}</td>
+                        <td>
+                            <a href="{% url team_view team_id=game.away_roster.team_id %}">
+                                {{ game.away_roster.team.name }}
+                            </a>
+                            {% if game.winner == game.away_roster.team %}
+                                <i class="icon-ok"></i>
+                            {% endif %}
+                        </td>
+                        <td>
+                            <a href="{% url team_view team_id=game.home_roster.team_id %}">
+                                {{ game.home_roster.team.name }}
+                            </a>
+                            {% if game.winner == game.home_roster.team %}
+                                <i class="icon-ok"></i>
+                            {% endif %}
+                        </td>
+                        <td class="right">
+                            {{ game.final_score.0 }} to {{ game.final_score.1 }}
+                        </td>
                     </tr>
                 {% endfor %}
             </tbody>
