--- a/templates/softball/team/view.html
+++ b/templates/softball/team/view.html
@@ -1,105 +1,51 @@
 {% extends 'softball/base.html' %}
 
-{% block title %}Teams{% endblock %}
+{% block title %}Team: {{ team.name }}{% endblock %}
 
 {% block body %}
+<div class="page-header">
+    {% if team.owned_by == user %}
+    <p class="pull-right">
+        {% if perms.softball.add_team %}
+        <a class="btn btn-danger" href="{% url team_delete team_id=team.id %}">
+            Delete Team</a>
+        {% endif %}
+        {% if perms.softball.change_team %}
+        <a class="btn" href="{% url team_edit team_id=team.id %}">Edit Team</a>
+        {% endif %}
+    </p>
+    {% endif %}
+    <h1>
+        {{ team.name }}
+        <small>
+            {{ record.0 }} win{{ record.0|pluralize }} /
+            {{ record.1 }} loss{{ record.1|pluralize:"es" }}
+        </small>
+    </h1>
+</div>
 
 <div class="row-fluid">
-  <div class="span9">
-    <h1>{{ team.name }}</h1>
-  </div>
-  <div class="span3">
-    <div class="well well-small right">
-      Record<br/>
-      <strong>{{ record.0 }} win{{ record.0|pluralize }} / {{ record.1 }} loss{{ record.1|pluralize:"es" }}</strong>
+    <div class="span12">
+        <h3>Players</h3>
+        {% include 'softball/team/part.player_list.html' with players=team.players %}
+        {% if team.owned_by == user and perms.softball.add_player %}
+        <p>
+            <a class="btn" href="{% url player_create %}?team_id={{ team.id }}&next={% url team_view team_id=team.id %}">
+                Add Player</a>
+        </p>
+        {% endif %}
     </div>
-  </div>
 </div>
 
 <div class="row-fluid">
-  <div class="span12">
-    <h2>Players</h2>
-    <table class="table table-striped table-condensed table-hover">
-      <thead>
-	<tr>
-	    <th>Number</th>
-	      <th>Name</th>
-	        <th class="right">AVG</th>
-		  <th class="right">OBP</th>
-		    <th class="right">SLUG</th>
-		      <th class="right">AB</th>
-		        <th class="right">H</th>
-			  <th class="right">BB</th>
-			    <th class="right">K</th>
-			      <th class="right">R</th>
-			        <th class="right">1B</th>
-				  <th class="right">2B</th>
-				    <th class="right">3B</th>
-				      <th class="right">HR</th>
-				      </tr>
-      </thead>
-      <tbody>
-	{% for player in team.players.all %}
-	<tr>
-	    <td>{{ player.number }}</td>
-	      <td>{{ player.name }}</td>
-	        <td class="right">{{ player.batting_average }}</td>
-		  <td class="right">{{ player.on_base_percentage }}</td>
-		    <td class="right">{{ player.slugging_percentage }}</td>
-		      <td class="right">{{ player.at_bats }}</td>
-		        <td class="right">{{ player.hits }}</td>
-			  <td class="right">{{ player.walks }}</td>
-			    <td class="right">{{ player.strikeouts  }}</td>
-			      <td class="right">{{ player.runs }}</td>
-			        <td class="right">{{ player.singles }}</td>
-				  <td class="right">{{ player.doubles }}</td>
-				    <td class="right">{{ player.triples }}</td>
-				      <td class="right">{{ player.home_runs }}</td>
-				      </tr>
-	{% endfor %}
-      </tbody>
-    </table>
-  </div>
+    <div class="span12">
+        <h3>Games</h3>
+        {% include 'softball/team/part.game_list.html' %}
+        {% if team.owned_by == user and perms.softball.add_game %}
+        <p>
+            <a class="btn" href="{% url game_create %}">Add Game</a>
+        </p>
+        {% endif %}
+    </div>
 </div>
-
-<div class="row-fluid">
-  <div class="span12">
-    <h2>Games</h2>
-    <table class="table table-striped table-condensed table-hover">
-      <thead>
-	<tr>
-	    <th>Date</th>
-	      <th>Location</th>
-	        <th>vs.</th>
-		  <th>Score</th>
-		  </tr>
-      </thead>
-      <tbody>
-	{% for roster in team.rosters.all %}
-	{% with game=roster.game %}
-	<tr {% if game.winner == team %}class="text-success"{% else %}class="text-error"{% endif %}>
-	    <td>
-	          {{ game.played_on }}
-		      {% if game.home_roster == roster %}
-		      <i class="icon-home"></i>
-		          {% endif %}
-		        </td>
-	      <td>{{ game.location }}</td>
-	        <td>
-		      {% if game.home_roster == roster %}
-		          <a href="{% url team_view team_id=game.away_roster.team.pk %}">{{ game.away_roster.team.name }}</a>
-			      {% else %}
-			      <a href="{% url team_view team_id=game.home_roster.team.pk %}">{{ game.home_roster.team.name }}</a>
-			          {% endif %}
-			        </td>
-		  <td>{{ game.away_score }} to {{ game.home_score }} {% if game.winner == team %}<i class="icon-ok"></i>{% endif %}</td>
-		  </tr>
-	{% endwith %}
-	{% endfor %}
-      </tbody>
-    </table>
-  </div>
-</div>
-
-
 {% endblock %}
